css/styles.css
body {
	font-family:arial;
	font-size:12px;
	/*background: #f6f7f0;*/
	background-image:url(bg3.png);
	background-size: 100%;
	margin:0;
	padding:0;
}

#info {
	background:#333;
	opacity:0.8;
	position: absolute;
	top:5px;
	right:5px;
	width:280px;
	color:#fff;
	border-radius: 5px;
	z-index:10
}

	#info p {
		padding:0 10px;
	}

a {
	text-decoration:none;
	color: #3e8ed7;
}

a:hover {
	color: #61b7e6;
}

.container {
	width:700px;
	height:100%;
	position:absolute;
	top:50px;
	left:50%;
	margin-left:-350px;
}
/*Nav*/

/*Maybe??*/

/* HEXAGON STARTS HERE */
.hex {

	width:150px;
	height:86px;
	background-color: #ccc;
	background-repeat: no-repeat;
	background-position: 50% 50%;
	-webkit-background-size: auto 173px;
	-moz-background-size: auto 173px;
	-ms-background-size: auto 173px;
	-o-background-size: auto 173px;
	position: relative;
	float:left;
	margin:25px 5px;
	text-align:center;
	zoom:1;
}

	.hex.hex-gap {
		margin-left: 86px;
	}

	.hex a {

		display:block;
		width: 100%;
		height:100%;
		text-indent:-9999em;
		position:absolute;
		top:0;
		left:0;
	}

	.hex .corner-1,
	.hex .corner-2 {
		position: absolute;
		top:0;
		left:0;
		width:100%;
		height:100%;
		background: inherit;
		z-index:-2;
		overflow:hidden;
		-webkit-backface-visibility: hidden;
		-moz-backface-visibility: hidden;
		-ms-backface-visibility: hidden;
		-o-backface-visibility: hidden;
		backface-visibility: hidden;
	}

	.hex .corner-1 {
		z-index:-1;
		-webkit-transform: rotate(60deg);
		-moz-transform: rotate(60deg);
		-ms-transform: rotate(60deg);
		-o-transform: rotate(60deg);
		transform: rotate(60deg);
	}

	.hex .corner-2 {
		-webkit-transform: rotate(-60deg);
		-moz-transform: rotate(-60deg);
		-ms-transform: rotate(-60deg);
		-o-transform: rotate(-60deg);
		transform: rotate(-60deg);
	}

	.hex .corner-1:before,
	.hex .corner-2:before {
		width: 173px;
		height:	173px;
	  content: '';
	  position: absolute;
	  background: inherit;
	  top:0;
	  left: 0;
	  z-index: 1;
	  background: inherit;
	  background-repeat:no-repeat;
		-webkit-backface-visibility: hidden;
		-moz-backface-visibility: hidden;
		-ms-backface-visibility: hidden;
		-o-backface-visibility: hidden;
		backface-visibility: hidden;
	}


	.hex .corner-1:before {
		-webkit-transform: rotate(-60deg) translate(-87px, 0px);
		-moz-transform: rotate(-60deg) translate(-87px, 0px);
		-ms-transform: rotate(-60deg) translate(-87px, 0px);
		-o-transform: rotate(-60deg) translate(-87px, 0px);
		transform: rotate(-60deg) translate(-87px, 0px);
	  -webkit-transform-origin: 0 0;
	  -moz-transform-origin: 0 0;
	  -ms-transform-origin: 0 0;
	  -o-transform-origin: 0 0;
	  transform-origin: 0 0;
	}

	.hex .corner-2:before {
		-webkit-transform: rotate(60deg) translate(-48px, -11px);
		-moz-transform: rotate(60deg) translate(-48px, -11px);
		-ms-transform: rotate(60deg) translate(-48px, -11px);
		-o-transform: rotate(60deg) translate(-48px, -11px);
		transform: rotate(60deg) translate(-48px, -11px);
		bottom:0;
	}



	/* Custom styles*/
	.hex .inner {
		color:#eee;
	}

	.hex h4 {
		font-family: 'Josefin Sans', sans-serif;
		margin:0;
	}

	.hex hr {
		border:0;
		border-top:1px solid #eee;
		width:60%;
		margin:15px auto;
	}

	.hex p {
		font-size:16px;
		font-family: 'Kotta One', serif;
		width:80%;
		margin:0 auto;
	}

	.hex.hex-1 {
		background: #717EC0;
	}

	.hex.hex-2 {
		background: #4657CA;
	}

	.hex.hex-3 {
		background: #4857B5;
	}

/* modal*/

#overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #000;
    opacity: 0.5;
    filter: alpha(opacity=50);
}

#modal {
    position:absolute;
    background:url(tint20.png) 0 0 repeat;
    background:rgba(0,0,0,0.2);
    border-radius:14px;
    padding:8px;
}

#content {
    border-radius:8px;
    background:#fff;
    padding:20px;
}

#close {
    position:absolute;
    background:url(close.png) ;
    width:24px;
    height:27px;
    display:block;
    text-indent:-9999px;
    top:-7px;
    right:-7px;
}

.hover {
	opacity: 0.4;
	backface-visibility: hidden;

}




.dark {
	opacity: 0.1;
}

/*Nav*/

nav ul {
	list-style: none; overflow: hidden; position: relative;
}
	nav ul li {
		float: left; margin: 0 20px 0 0;
	}
		nav ul li a {
			display: block; width: 120px; height: 120px;
			background-image: url(icons.png); background-repeat: no-repeat;
		}
			nav ul li:nth-child(1) a {
				background-color: #5bb2fc;
				background-position: 28px 28px;
			}
			nav ul li:nth-child(2) a {
				background-color: #58ebd3;
				background-position: 28px -96px;
			}
			nav ul li:nth-child(3) a {
				background-color: #ffa659;
				background-position: 28px -222px;
			}
			nav ul li:nth-child(4) a {
				background-color: #ff7a85;
				background-position: 28px -342px;
			}

				nav ul li a span {
					font: 50px "Dosis", sans-serif; text-transform: uppercase;
					position: absolute; left: 580px; top: 29px;
					display: none;
				}
					nav ul li a:hover span {
						display: block;
					}

				nav ul li:nth-child(1) a span {
					color: #5bb2fc;
				}
				nav ul li:nth-child(2) a span {
					color: #58ebd3;
				}
				nav ul li:nth-child(3) a span {
					color: #ffa659;
				}
				nav ul li:nth-child(4) a span {
					color: #ff7a85;
				}

	#background-text-1,
  #background-text-2,
  #background-text-3,
  #background-text-4,
  #background-text-5,
  #background-text-6,
  #background-text-7,
  #background-text-8,
  #background-text-9,
  #background-text-10,
  #background-text-11 {
  	color: white;
  	text-decoration: bold;
  	top: 10px;
  	font-family: 'Arial Black', serif;
  	font-size: 15px;
  }

  #about,
  #contact-me,
  #cool-projects {
  	opacity: 0.60;
  }


#header_container { background:#47454b; border:1px solid #666; height:45px; left:0; position:fixed; width:100%; top:0; }
#header{ line-height:20px; margin:0 auto; width:940px; text-align:left; }

